modules/06-argocd/k8s-manifests/argocd_server_ingress.yml
# Apply the following command before this step
# kubectl delete validatingwebhookconfigurations kn-lab-argocd-ingress-nginx-admission -n ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kn-lab-argocd-argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.kennguyen.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.kennguyen.live
    secretName: argocd-secret # do not change, this is provided by Argo CD

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kn-lab-argocd-argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.kennguyen.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
